# spaider-agent-template

./: .gitignore  README.md  pyproject.toml
spaider_agent_temp/: app.py  graph.py  schemas.py
spaider_agent_temp/models/: chatgroq.py
spaider_agent_temp/nodes_and_conditional_edges/: conditional_edges.py  nodes.py
spaider_agent_temp/prompts/: prompts.py
spaider_agent_temp/tools/: shell.py
spaider_agent_template/: app.py  graph.py  main.py  nodes_and_cond_edges.py  prompts.py  schemas.py  visualization.py
spaider_agent_template/models/: __init__.py  models.py
spaider_agent_template/tools/: file_tree.py  shell.py
testfolder/: file0.txt  greeter.py  test.py
testfolder/folder1/: vedant.txt
